Create index.html (but won't work as stlite due to lack of pure wheel for keplergl)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       stlite.mount(
   {
-    requirements: ["pandas", ""],
+    requirements: ["pandas", "numpy", "geopandas", "keplergl", "streamlit_keplergl"],
     entrypoint: "Introduction.py",
     files: {
       "Introduction.py": `
@@ -57,14 +57,14 @@ st.markdown(
 
 `,
 "pages/1_Point_Map.py": {
-        url: "https://raw.githubusercontent.com/hsma-programme/stats19_streamlit/main/pages/1_Point_Map.py"
+        url: "https://raw.githubusercontent.com/Bergam0t/stats19_streamlit/main/pages/1_Point_Map.py"
       },
 "pages/2_Choropleth.py": {
-        url: "https://raw.githubusercontent.com/hsma-programme/stats19_streamlit/main/pages/2_Choropleth.py"
+        url: "https://raw.githubusercontent.com/Bergam0t/stats19_streamlit/main/pages/2_Choropleth.py"
       },
 
 "helper_functions.py": {
-        url: "https://raw.githubusercontent.com/hsma-programme/Teaching_DES_Concepts_Streamlit/main/helper_functions.py"
+        url: "https://raw.githubusercontent.com/Bergam0t/stats19_streamlit/main/helper_functions.py"
       },
  
 "style.css": {
